--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["no-std", "os"]
 keywords = ["no_std", "OS"]
 
 [dependencies]
-accessor = "0.3.0"
+accessor = { path = "../accessor" }
 bit_field = "0.10.1"
 num-derive = { version = "0.3.3", default-features = false }
 num-traits = { version = "0.2.14", default-features = false }
