--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ num-derive = { version = "0.3.3", default-features = false }
 num-traits = { version = "0.2.14", default-features = false }
 paste = "1.0.4"
 volatile = "0.5.1"
+volatile_field = { path = "../volatile_field" }
